# libequaio-cpp

./: .clangd  .gitignore  CMakeLists.txt
include/: arithmetic.h  block_display.h  expression.h  interface.h  libequaio.h  parser.h  utils.h
src/: arithmetic.cpp  block_display.cpp  expression.cpp  interface.cpp  libequaio.cpp  parser.cpp  utils.cpp
test/: arithmetic.spec.cpp  interface.spec.cpp  parser.spec.cpp  test_main.cpp
